@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-05-02
-// Last changed: 2005-11-28
+// Last changed: 2005-11-29
 
 #ifndef __FINITE_ELEMENT_H
 #define __FINITE_ELEMENT_H
@@ -38,9 +38,8 @@ namespace dolfin
     /// Return vector dimension of the finite element space
     virtual unsigned int tensordim(unsigned int i) const = 0;
 
-    // FIXME: Make pure virtual when working
     /// Return dimension of (mixed) element (number of sub elements)
-    virtual unsigned int elementdim() const { return 1; }
+    virtual unsigned int elementdim() const = 0;
 
     /// Return vector dimension of the finite element space
     virtual unsigned int rank() const = 0;
@@ -53,14 +52,12 @@ namespace dolfin
 			  const AffineMap& map) const = 0;
 
     // FIXME: Should not have vector here!
-    // FIXME: Make pure virtual when working
     /// Compute map from (vertex, component) to function value
     virtual void vertexeval(real values[], unsigned int vertex, 
-			    const Vector& x, const Mesh& mesh) const {};
+			    const Vector& x, const Mesh& mesh) const = 0;
 
-    // FIXME: Make pure virtual when working
     /// Return given sub element of (mixed) element
-    virtual const FiniteElement& operator[] (unsigned int i) const { return *this; }
+    virtual const FiniteElement& operator[] (unsigned int i) const = 0;
 
     /// Display finite element data
     void disp() const;
