@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-05-02
-// Last changed: 2005
+// Last changed: 2005-11-29
 
 #ifndef __P1_TRI_H
 #define __P1_TRI_H
@@ -18,42 +18,61 @@ namespace dolfin
   /// might be useful for simple computations with standard linear
   /// elements.
 
-  class P1Tri : public FiniteElement
+  class P1Tri : public dolfin::FiniteElement
   {
   public:
-        
-    P1Tri(uint vectordim = 0) : FiniteElement(), vectordim(vectordim) {}
-    
-    ~P1Tri() {}
-
+  
+    P1Tri() : dolfin::FiniteElement(), tensordims(0), subelements(0)
+    {
+      // Element is scalar, don't need to initialize tensordims
+  
+      // Element is simple, don't need to initialize subelements
+    }
+  
+    ~P1Tri()
+    {
+      if ( tensordims ) delete [] tensordims;
+      if ( subelements )
+      {
+        for (unsigned int i = 0; i < elementdim(); i++)
+          delete subelements[i];
+        delete [] subelements;
+      }
+    }
+  
     inline unsigned int spacedim() const
     {
       return 3;
     }
-
+  
     inline unsigned int shapedim() const
     {
       return 2;
     }
-
+  
     inline unsigned int tensordim(unsigned int i) const
     {
       dolfin_error("Element is scalar.");
       return 0;
     }
-
+  
+    inline unsigned int elementdim() const
+    {
+      return 1;
+    }
+  
     inline unsigned int rank() const
     {
       return 0;
     }
-
+  
     void dofmap(int dofs[], const Cell& cell, const Mesh& mesh) const
     {
       dofs[0] = cell.nodeID(0);
       dofs[1] = cell.nodeID(1);
       dofs[2] = cell.nodeID(2);
     }
-
+  
     void pointmap(Point points[], unsigned int components[], const AffineMap& map) const
     {
       points[0] = map(0.000000000000000e+00, 0.000000000000000e+00);
@@ -63,11 +82,23 @@ namespace dolfin
       components[1] = 0;
       components[2] = 0;
     }
-
-  private:
-
-    uint vectordim;
+  
+    void vertexeval(real values[], unsigned int vertex, const Vector& x, const Mesh& mesh) const
+    {
+      // FIXME: Temporary fix for Lagrange elements
+      values[0] = x(vertex);
+    }
+  
+    const FiniteElement& operator[] (unsigned int i) const
+    {
+      return *this;
+    }
     
+  private:
+  
+    unsigned int* tensordims;
+    FiniteElement** subelements;
+  
   };
   
 }
