@@ -1,0 +1,13 @@
+# Copyright (C) 2005 Anders Logg.
+# Licensed under the GNU GPL Version 2.
+#
+# This is a dummy form used to generate code for piecewise
+# linear elements on triangles.
+#
+# Compile this form with FFC: ffc P1TriTemplate.form and
+# copy the code for the finite element.
+
+element = FiniteElement("Lagrange", "triangle", 1)
+
+v = BasisFunction(element)
+L = v*dx
